--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -40,6 +41,7 @@
         <activity
             android:name="com.j.sakthikanth.onchats.ChatActivity"
             android:label="@string/title_activity_chat"
+            android:windowSoftInputMode="stateAlwaysHidden"
             android:parentActivityName="com.j.sakthikanth.onchats.MainPage2"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
