--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,11 @@
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+    <uses-permission android:name="android.permission.READ_SMS" />
+    <uses-permission android:name="android.permission.SEND_SMS" />
 
     <application
         android:allowBackup="true"
@@ -15,21 +20,27 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.j.sakthikanth.onchats.Registration"
-            android:label="@string/app_name" />
+            android:name=".Registration"
+            android:label="@string/app_name" >
+
+        </activity>
+
+
         <activity
-            android:name="com.j.sakthikanth.onchats.Way2Login"
+            android:name=".Way2Login"
             android:label="@string/title_activity_way2_login" />
         <activity
-            android:name="com.j.sakthikanth.onchats.MainActivity"
+            android:name=".MainActivity"
             android:label="@string/title_activity_main"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar" >
+
+        </activity>
         <activity
-            android:name="com.j.sakthikanth.onchats.MainPage"
+            android:name=".MainPage"
             android:label="@string/title_activity_main_page"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="com.j.sakthikanth.onchats.MainPage2"
+            android:name=".MainPage2"
             android:label="@string/title_activity_main_page2"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -39,15 +50,30 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.j.sakthikanth.onchats.ChatActivity"
+            android:name=".ChatActivity"
             android:label="@string/title_activity_chat"
-            android:windowSoftInputMode="stateAlwaysHidden"
-            android:parentActivityName="com.j.sakthikanth.onchats.MainPage2"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:parentActivityName=".MainPage2"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="stateAlwaysHidden">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.j.sakthikanth.onchats.MainPage2" />
+
         </activity>
+        <activity android:name=".Base64_enc"></activity>
+        <activity android:name=".Load_contacts">
+
+        </activity>
+
+        <activity android:name=".ContactsPickerActivity" >
+
+        </activity>
+
+        <receiver android:name="com.j.sakthikanth.onchats.IncomingSms">
+            <intent-filter>
+                <action android:name="android.provider.Telephony.SMS_RECEIVED" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
